chore: mount nginx errors config

--- a/infra/nginx/errors.conf
+++ b/infra/nginx/errors.conf
@@ -1,12 +1,15 @@
-# Example error-page mapping for the static site (no sensitive data)
-# Include inside the relevant server block.
+# Error-page mapping for the static site (no sensitive data)
+server {
+    listen 80;
+    server_name _;
+    root /usr/share/nginx/html;
+    index index.html;
 
-error_page 403 /errors/403.html;
-error_page 404 /errors/404.html;
-error_page 500 502 503 504 /errors/500.html;
+    error_page 403 /errors/403.html;
+    error_page 404 /errors/404.html;
+    error_page 500 502 503 504 /errors/500.html;
 
-location /errors/ {
-    # Adjust to the static root where /errors/ lives.
-    root /var/www/html;
-    internal;
+    location /errors/ {
+        internal;
+    }
 }
