--- a/dev/docker/docker-compose.yml
+++ b/dev/docker/docker-compose.yml
@@ -6,4 +6,5 @@ services:
       - "8080:80"                # http://localhost:8080
     volumes:
       - ../../web:/usr/share/nginx/html:ro
+      - ../../infra/nginx/errors.conf:/etc/nginx/conf.d/default.conf:ro
     restart: unless-stopped
