--- a/infra/nginx/errors.conf
+++ b/infra/nginx/errors.conf
@@ -4,6 +4,7 @@ server {
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
+    absolute_redirect off;
 
     error_page 403 /errors/403.html;
     error_page 404 /errors/404.html;
