--- a/infra/nginx/errors.conf
+++ b/infra/nginx/errors.conf
@@ -10,6 +10,18 @@ server {
     error_page 404 /errors/404.html;
     error_page 500 502 503 504 /errors/500.html;
 
+    # --- TEST LOCAL: simular IP con header (solo confiar en localhost) ---
+    set_real_ip_from 127.0.0.1;
+    real_ip_header X-Real-IP;
+    real_ip_recursive on;
+
+    # --- Proteccion SOLO /analytics-prueba/ ---
+    location ^~ /analytics-prueba/ {
+        allow 127.0.0.1;     # permitido por defecto en local
+        deny all;            # todo lo demas bloqueado
+        try_files $uri $uri/ =404;
+    }
+
     location /errors/ {
         internal;
     }
