--- a/.gitignore
+++ b/.gitignore
@@ -42,17 +42,11 @@ pnpm-debug.log*
 dist/
 build/
 .cache/
-
-# Allow committing the static dist for production
-!web/dist/
-!web/dist/**
-# Keep dist HTML tracked but avoid duplicating assets tree
-web/dist/assets/
+edge/web/dist/
 dev/bin/ffmpeg/
 dev/bin/ffmpeg.zip
-web/assets/media/fondo-web.optimized.webm
-web/assets/media/fondo-web.webm
-web/assets/media/fondo-web-small.backup.webm
+edge/web/assets/media/fondo-web.webm
+edge/web/assets/media/fondo-web-small.backup.webm
 
 # =========================
 # Python (just in case)
